tests/ui/unsafe_store_requires_unsafe.stderr
error[E0133]: call to unsafe function `std::arch::x86_64::_mm256_storeu_ps` is unsafe and requires unsafe block
  --> tests/ui/unsafe_store_requires_unsafe.rs:17:5
   |
17 |     _mm256_storeu_ps(data.as_mut_ptr(), zeros);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior
